syntax = "proto3";

package email;

message Empty {}

service NotificationService {
    rpc NotifyPurchase (NoticeData) returns (Empty) {}
}

message NoticeData {
    string firstName = 1;
    string make = 2;
    string vin = 3;
    string carModel = 4;
    string email = 5;
}
